feat delete offer
