# usecase/requestusecase/delete_request_usecase.go
@@ -24,3 +24,47 @@ func (t *requestHandler) RemoveOne(username, id string) error {
 	}
 	return data.Success
 }
+
+func (t *requestHandler) DeleteOffer(username, offerID string) error {
+	//var
+	offer := &models.Offer{}
+	user := &models.User{}
+	request := &models.Request{}
+
+	user.Username = username
+	err := user.Get()
+	if err != nil {
+		return data.NotExisted
+	}
+
+	offer.ID = offerID
+	err = offer.Get()
+	if err != nil {
+		return data.NotExisted
+	}
+
+	request.ID = offer.RequestID
+	err = request.Get()
+	if err != nil {
+		return data.NotExisted
+	}
+
+	if request.Username != username {
+		return data.NotPermission
+	}
+
+	if request.AcceptOffer == offerID {
+		request.AcceptOffer = ""
+		err = request.Update()
+		if err != nil {
+			return data.ErrSystem
+		}
+	}
+
+	err = offer.Delete()
+	if err != nil {
+		return data.ErrSystem
+	}
+
+	return data.Success
+}
