# usecase/requestusecase/request_usecase.go
@@ -12,6 +12,7 @@ type RequestInterface interface {
 	UpdateOne(username, id string, put requests.RequestPut) error
 	RemoveOne(username, id string) error
 	AcceptOffer(username, offerID string) error
+	DeleteOffer(username, offerID string) error
 	FindAvailableTeacher(requestID string) ([]*responses.TeacherSearch, error)
 }
 
